// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OffersModificationModal > Structure > always > should have match snapshot 1`] = `
<body>
  <div>
    <div
      class="w-full md:w-6/12 lg:w-6/12 xl:w-4/12"
    >
      <div
        class="bg-white w-full flex flex-col gap-7 items-center rounded-md"
      >
        <header
          class="w-full flex justify-between items-center text-md font-bold uppercase bg-green-50 h-14 text-center p-3 text-black rounded-t-md"
        >
          <p>
            Offers Modification Modal
          </p>
           
          <button
            class="w-8 h-8 flex items-center justify-center rounded-full"
            data-testid="close-modal-button"
          >
            <svg
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M12 2c5.53 0 10 4.47 10 10s-4.47 10-10 10S2 17.53 2 12S6.47 2 12 2m3.59 5L12 10.59L8.41 7L7 8.41L10.59 12L7 15.59L8.41 17L12 13.41L15.59 17L17 15.59L13.41 12L17 8.41z"
                fill="currentColor"
              />
            </svg>
            <!--&lt;Close-circle&gt;-->
          </button>
        </header>
         
        <p
          class="w-11/12 text-start text-slate-600"
        >
          the body
        </p>
         
        <form
          class="w-11/12 h-[36rem] overflow-y-scroll"
        >
          <div
            class="mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Image
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="py-2 relative w-full aspect-1 flex flex-row items-center bg-gray-300 border-2 border-red-500"
            >
              <div
                class="absolute w-full flex-1 flex flex-col items-center"
              >
                <div
                  class="w-full"
                  data-testid="input-container"
                >
                  <h4
                    class="mb-1 text-black"
                    data-testid="input-label-id"
                  >
                    
                     
                  </h4>
                   
                  <input
                    accept="image/*"
                    class="w-full h-fit hidden p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                    data-testid="image-file-input"
                    id="image-file-input"
                    placeholder=""
                    type="file"
                  />
                </div>
                <!--&lt;Input&gt;-->
                 
                <button
                  class="flex justify-around items-center uppercase rounded-sm font-bold w-2/3 shadow-sm p-4 bg-gray-700 hover:bg-gray-800 border-black text-white"
                  data-testid="select-image-button"
                  id="select-image-button"
                >
                  <div
                    class="flex flex-row items-center"
                  >
                    <svg
                      class="inline m-1"
                      height="1.2em"
                      viewBox="0 0 24 24"
                      width="1.2em"
                    >
                      <path
                        d="M4 4h3l2-2h6l2 2h3a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2m8 3a5 5 0 0 0-5 5a5 5 0 0 0 5 5a5 5 0 0 0 5-5a5 5 0 0 0-5-5m0 2a3 3 0 0 1 3 3a3 3 0 0 1-3 3a3 3 0 0 1-3-3a3 3 0 0 1 3-3"
                        fill="currentColor"
                      />
                    </svg>
                    <!--&lt;Camera&gt;-->
                     
                    <span
                      class="flex-1"
                    >
                      Choisir image
                    </span>
                  </div>
                </button>
                <!--&lt;Button&gt;-->
              </div>
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="w-full"
              data-testid="input-container"
            >
              <h4
                class="mb-1 text-black"
                data-testid="input-label-id"
              >
                Nom
                 
                <span
                  class="text-red-500"
                >
                  *
                </span>
              </h4>
               
              <input
                accept="*"
                class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                data-testid="name-input"
                id="name-input"
                placeholder="Pepsi Diet"
                type="text"
              />
            </div>
            <!--&lt;Input&gt;-->
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Prix
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="price-input"
                  id="price-input"
                  placeholder="9.99"
                  step="0.01"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Quantité
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="quantity-input"
                  id="quantity-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div>
                <div
                  class="relative"
                >
                  <div
                    class="w-full"
                    data-testid="input-container"
                  >
                    <h4
                      class="mb-1 text-black"
                      data-testid="input-label-id"
                    >
                      Unité
                       
                    </h4>
                     
                    <input
                      accept="*"
                      class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                      data-testid="unit-select"
                      id="unit-select"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                  <!--&lt;Input&gt;-->
                   
                  <button
                    class="absolute bottom-2.5 right-1"
                  >
                    <svg
                      class="w-8 h-8 text-gray-400"
                      height="1.2em"
                      viewBox="0 0 24 24"
                      width="1.2em"
                    >
                      <path
                        d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6z"
                        fill="currentColor"
                      />
                    </svg>
                    <!--&lt;Chevron-down&gt;-->
                  </button>
                   
                  <div
                    class="hidden absolute top-22 flex flex-col w-full font-bold gap-1 z-30 h-56"
                  >
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Centiliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Liter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milliliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Kilogram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Gram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milligram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Piece
                    </button>
                    <!--&lt;SelectOption&gt;-->
                  </div>
                </div>
              </div>
              <!--&lt;Select&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Catégories
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="input-chip textarea cursor-pointer p-2 rounded-container-token categoriesSelection w-full p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 "
            >
              <div
                class="h-0 overflow-hidden"
              >
                <select
                  aria-label="Catégories"
                  multiple=""
                  name="Catégories"
                  tabindex="-1"
                />
              </div>
               
              <div
                class="input-chip-wrapper space-y-4 "
              >
                <form>
                  <input
                    class="input-chip-field unstyled bg-transparent border-0 !ring-0 p-0 w-full "
                    placeholder="Entrez le nom d'une catégorie"
                    type="text"
                  />
                </form>
                 
              </div>
            </div>
            <!--&lt;InputChip&gt;-->
             
          </div>
           
          <div
            class="py-2 mb-2 gap-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Taxes de vente
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <button
              class="chip text-lg variant-soft mr-2"
              data-category="taxCategory1"
              data-testid="taxCategory1"
            >
              <span>
                taxCategory1
              </span>
               
            </button>
            <button
              class="chip text-lg variant-soft mr-2"
              data-category="taxCategory2"
              data-testid="taxCategory2"
            >
              <span>
                taxCategory2
              </span>
               
            </button>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class="flex-1"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Code barre
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="barcode-input"
                  id="barcode-input"
                  placeholder="00000ABD000"
                  type="text"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class="flex-0 w-[6rem]"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Inventaire
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="inventory-input"
                  id="inventory-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Description
            </h4>
             
            <textarea
              class="w-full text-l px-3 py-2 p-3.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              id="large-text-input"
              placeholder="Ce produit provient de la ..."
              rows="4"
            />
          </div>
        </form>
         
        <footer
          class="w-11/12 flex flex-row md:justify-between gap-2 mb-5"
        >
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  }  h-12 bg-white hover:bg-orange-50 border text-black"
            data-testid="cancel-button"
            id="cancel-button"
          >
            Cancel
          </button>
          <!--&lt;Button&gt;-->
           
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 shadow-sm h-12 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  } bg-slate-200  border border-gray-300 text-gray-500"
            data-testid="continue-button"
            disabled=""
            id="continue-button"
          >
            Submit
          </button>
          <!--&lt;Button&gt;-->
        </footer>
      </div>
      <!--&lt;BaseModal&gt;-->
    </div>
    
    <!--&lt;OffersModificationModal&gt;-->
  </div>
</body>
`;

exports[`OffersModificationModal > Structure > when used for creating a new offer > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="w-full md:w-6/12 lg:w-6/12 xl:w-4/12"
    >
      <div
        class="bg-white w-full flex flex-col gap-7 items-center rounded-md"
      >
        <header
          class="w-full flex justify-between items-center text-md font-bold uppercase bg-green-50 h-14 text-center p-3 text-black rounded-t-md"
        >
          <p>
            Offers Modification Modal
          </p>
           
          <button
            class="w-8 h-8 flex items-center justify-center rounded-full"
            data-testid="close-modal-button"
          >
            <svg
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M12 2c5.53 0 10 4.47 10 10s-4.47 10-10 10S2 17.53 2 12S6.47 2 12 2m3.59 5L12 10.59L8.41 7L7 8.41L10.59 12L7 15.59L8.41 17L12 13.41L15.59 17L17 15.59L13.41 12L17 8.41z"
                fill="currentColor"
              />
            </svg>
            <!--&lt;Close-circle&gt;-->
          </button>
        </header>
         
        <p
          class="w-11/12 text-start text-slate-600"
        >
          the body
        </p>
         
        <form
          class="w-11/12 h-[36rem] overflow-y-scroll"
        >
          <div
            class="mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Image
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="py-2 relative w-full aspect-1 flex flex-row items-center bg-gray-300 border-2 border-red-500"
            >
              <div
                class="absolute w-full flex-1 flex flex-col items-center"
              >
                <div
                  class="w-full"
                  data-testid="input-container"
                >
                  <h4
                    class="mb-1 text-black"
                    data-testid="input-label-id"
                  >
                    
                     
                  </h4>
                   
                  <input
                    accept="image/*"
                    class="w-full h-fit hidden p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                    data-testid="image-file-input"
                    id="image-file-input"
                    placeholder=""
                    type="file"
                  />
                </div>
                <!--&lt;Input&gt;-->
                 
                <button
                  class="flex justify-around items-center uppercase rounded-sm font-bold w-2/3 shadow-sm p-4 bg-gray-700 hover:bg-gray-800 border-black text-white"
                  data-testid="select-image-button"
                  id="select-image-button"
                >
                  <div
                    class="flex flex-row items-center"
                  >
                    <svg
                      class="inline m-1"
                      height="1.2em"
                      viewBox="0 0 24 24"
                      width="1.2em"
                    >
                      <path
                        d="M4 4h3l2-2h6l2 2h3a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2m8 3a5 5 0 0 0-5 5a5 5 0 0 0 5 5a5 5 0 0 0 5-5a5 5 0 0 0-5-5m0 2a3 3 0 0 1 3 3a3 3 0 0 1-3 3a3 3 0 0 1-3-3a3 3 0 0 1 3-3"
                        fill="currentColor"
                      />
                    </svg>
                    <!--&lt;Camera&gt;-->
                     
                    <span
                      class="flex-1"
                    >
                      Choisir image
                    </span>
                  </div>
                </button>
                <!--&lt;Button&gt;-->
              </div>
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="w-full"
              data-testid="input-container"
            >
              <h4
                class="mb-1 text-black"
                data-testid="input-label-id"
              >
                Nom
                 
                <span
                  class="text-red-500"
                >
                  *
                </span>
              </h4>
               
              <input
                accept="*"
                class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                data-testid="name-input"
                id="name-input"
                placeholder="Pepsi Diet"
                type="text"
              />
            </div>
            <!--&lt;Input&gt;-->
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Prix
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="price-input"
                  id="price-input"
                  placeholder="9.99"
                  step="0.01"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Quantité
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="quantity-input"
                  id="quantity-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div>
                <div
                  class="relative"
                >
                  <div
                    class="w-full"
                    data-testid="input-container"
                  >
                    <h4
                      class="mb-1 text-black"
                      data-testid="input-label-id"
                    >
                      Unité
                       
                    </h4>
                     
                    <input
                      accept="*"
                      class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                      data-testid="unit-select"
                      id="unit-select"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                  <!--&lt;Input&gt;-->
                   
                  <button
                    class="absolute bottom-2.5 right-1"
                  >
                    <svg
                      class="w-8 h-8 text-gray-400"
                      height="1.2em"
                      viewBox="0 0 24 24"
                      width="1.2em"
                    >
                      <path
                        d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6z"
                        fill="currentColor"
                      />
                    </svg>
                    <!--&lt;Chevron-down&gt;-->
                  </button>
                   
                  <div
                    class="hidden absolute top-22 flex flex-col w-full font-bold gap-1 z-30 h-56"
                  >
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Centiliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Liter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milliliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Kilogram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Gram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milligram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Piece
                    </button>
                    <!--&lt;SelectOption&gt;-->
                  </div>
                </div>
              </div>
              <!--&lt;Select&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Catégories
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="input-chip textarea cursor-pointer p-2 rounded-container-token categoriesSelection w-full p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 "
            >
              <div
                class="h-0 overflow-hidden"
              >
                <select
                  aria-label="Catégories"
                  multiple=""
                  name="Catégories"
                  tabindex="-1"
                />
              </div>
               
              <div
                class="input-chip-wrapper space-y-4 "
              >
                <form>
                  <input
                    class="input-chip-field unstyled bg-transparent border-0 !ring-0 p-0 w-full "
                    placeholder="Entrez le nom d'une catégorie"
                    type="text"
                  />
                </form>
                 
              </div>
            </div>
            <!--&lt;InputChip&gt;-->
             
          </div>
           
          <div
            class="py-2 mb-2 gap-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Taxes de vente
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <button
              class="chip text-lg variant-soft mr-2"
              data-category="taxCategory1"
              data-testid="taxCategory1"
            >
              <span>
                taxCategory1
              </span>
               
            </button>
            <button
              class="chip text-lg variant-soft mr-2"
              data-category="taxCategory2"
              data-testid="taxCategory2"
            >
              <span>
                taxCategory2
              </span>
               
            </button>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class="flex-1"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Code barre
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="barcode-input"
                  id="barcode-input"
                  placeholder="00000ABD000"
                  type="text"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class="flex-0 w-[6rem]"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Inventaire
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="inventory-input"
                  id="inventory-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Description
            </h4>
             
            <textarea
              class="w-full text-l px-3 py-2 p-3.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              id="large-text-input"
              placeholder="Ce produit provient de la ..."
              rows="4"
            />
          </div>
        </form>
         
        <footer
          class="w-11/12 flex flex-row md:justify-between gap-2 mb-5"
        >
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  }  h-12 bg-white hover:bg-orange-50 border text-black"
            data-testid="cancel-button"
            id="cancel-button"
          >
            Cancel
          </button>
          <!--&lt;Button&gt;-->
           
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 shadow-sm h-12 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  } bg-slate-200  border border-gray-300 text-gray-500"
            data-testid="continue-button"
            disabled=""
            id="continue-button"
          >
            Submit
          </button>
          <!--&lt;Button&gt;-->
        </footer>
      </div>
      <!--&lt;BaseModal&gt;-->
    </div>
    
    <!--&lt;OffersModificationModal&gt;-->
  </div>
</body>
`;

exports[`OffersModificationModal > Structure > when used for modifying existing offer > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="w-full md:w-6/12 lg:w-6/12 xl:w-4/12"
    >
      <div
        class="bg-white w-full flex flex-col gap-7 items-center rounded-md"
      >
        <header
          class="w-full flex justify-between items-center text-md font-bold uppercase bg-green-50 h-14 text-center p-3 text-black rounded-t-md"
        >
          <p>
            Offers Modification Modal
          </p>
           
          <button
            class="w-8 h-8 flex items-center justify-center rounded-full"
            data-testid="close-modal-button"
          >
            <svg
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M12 2c5.53 0 10 4.47 10 10s-4.47 10-10 10S2 17.53 2 12S6.47 2 12 2m3.59 5L12 10.59L8.41 7L7 8.41L10.59 12L7 15.59L8.41 17L12 13.41L15.59 17L17 15.59L13.41 12L17 8.41z"
                fill="currentColor"
              />
            </svg>
            <!--&lt;Close-circle&gt;-->
          </button>
        </header>
         
        <p
          class="w-11/12 text-start text-slate-600"
        >
          the body
        </p>
         
        <form
          class="w-11/12 h-[36rem] overflow-y-scroll"
        >
          <div
            class="mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Image
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="py-2 relative w-full aspect-1 flex flex-row items-center bg-gray-300 "
            >
              <div
                class="absolute w-full h-full bg-white"
              >
                <img
                  alt="ordered-item-name"
                  class="w-full h-full object-contain"
                  src="https://cdn-cemal.nitrocdn.com/iwTMUnSsYeigzDpMWgwdBZhpcIeWwszq/assets/images/optimized/rev-59c8081/www.aaronfaber.com/wp-content/uploads/2017/03/product-placeholder-wp-95907_800x675.jpg"
                  width="160"
                />
                <!--&lt;Image&gt;-->
                 
                <button
                  class=" justify-around items-center uppercase rounded-sm font-bold absolute top-1 right-2 border-none p-2 background-none border text-white"
                  data-testid="clear-image-button"
                  id="clear-image-button"
                >
                  <svg
                    class="text-3xl font-bold bg-red-400 rounded-full p-1 hover:bg-red-500"
                    height="1.2em"
                    viewBox="0 0 24 24"
                    width="1.2em"
                  >
                    <path
                      d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12z"
                      fill="currentColor"
                    />
                  </svg>
                  <!--&lt;Close&gt;-->
                </button>
                <!--&lt;Button&gt;-->
              </div>
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="w-full"
              data-testid="input-container"
            >
              <h4
                class="mb-1 text-black"
                data-testid="input-label-id"
              >
                Nom
                 
                <span
                  class="text-red-500"
                >
                  *
                </span>
              </h4>
               
              <input
                accept="*"
                class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                data-testid="name-input"
                id="name-input"
                placeholder="Pepsi Diet"
                type="text"
              />
            </div>
            <!--&lt;Input&gt;-->
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Prix
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="price-input"
                  id="price-input"
                  placeholder="9.99"
                  step="0.01"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class=""
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Quantité
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="quantity-input"
                  id="quantity-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div>
                <div
                  class="relative"
                >
                  <div
                    class="w-full"
                    data-testid="input-container"
                  >
                    <h4
                      class="mb-1 text-black"
                      data-testid="input-label-id"
                    >
                      Unité
                       
                    </h4>
                     
                    <input
                      accept="*"
                      class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                      data-testid="unit-select"
                      id="unit-select"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                  <!--&lt;Input&gt;-->
                   
                  <button
                    class="absolute bottom-2.5 right-1"
                  >
                    <svg
                      class="w-8 h-8 text-gray-400"
                      height="1.2em"
                      viewBox="0 0 24 24"
                      width="1.2em"
                    >
                      <path
                        d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6z"
                        fill="currentColor"
                      />
                    </svg>
                    <!--&lt;Chevron-down&gt;-->
                  </button>
                   
                  <div
                    class="hidden absolute top-22 flex flex-col w-full font-bold gap-1 z-30 h-56"
                  >
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-orange-100 text-red-500"
                    >
                      Centiliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Liter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milliliter
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Kilogram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Gram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Milligram
                    </button>
                    <!--&lt;SelectOption&gt;-->
                    <button
                      class="h-14 flex justify-start items-center shadow-md pl-3.5 py-4 hover:bg-orange-100 hover:text-red-500 rounded-md bg-white"
                    >
                      Piece
                    </button>
                    <!--&lt;SelectOption&gt;-->
                  </div>
                </div>
              </div>
              <!--&lt;Select&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Catégories
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <div
              class="input-chip textarea cursor-pointer p-2 rounded-container-token categoriesSelection w-full p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 border-2 border-red-500"
            >
              <div
                class="h-0 overflow-hidden"
              >
                <select
                  aria-label="Catégories"
                  multiple=""
                  name="Catégories"
                  tabindex="-1"
                />
              </div>
               
              <div
                class="input-chip-wrapper space-y-4 "
              >
                <form>
                  <input
                    class="input-chip-field unstyled bg-transparent border-0 !ring-0 p-0 w-full "
                    placeholder="Entrez le nom d'une catégorie"
                    type="text"
                  />
                </form>
                 
              </div>
            </div>
            <!--&lt;InputChip&gt;-->
             
          </div>
           
          <div
            class="py-2 mb-2 gap-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Taxes de vente
                        
              <span
                class="text-red-500"
              >
                *
              </span>
            </h4>
             
            <button
              class="chip text-lg variant-filled mr-2"
              data-category="taxCategory1"
              data-testid="taxCategory1"
            >
              <span>
                taxCategory1
              </span>
               
            </button>
            <button
              class="chip text-lg variant-soft mr-2"
              data-category="taxCategory2"
              data-testid="taxCategory2"
            >
              <span>
                taxCategory2
              </span>
               
            </button>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <div
              class="flex flex-row gap-2 justify-between"
            >
              <div
                class="flex-1"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Code barre
                   
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="barcode-input"
                  id="barcode-input"
                  placeholder="00000ABD000"
                  type="text"
                />
              </div>
              <!--&lt;Input&gt;-->
               
              <div
                class="flex-0 w-[6rem]"
                data-testid="input-container"
              >
                <h4
                  class="mb-1 text-black"
                  data-testid="input-label-id"
                >
                  Inventaire
                   
                </h4>
                 
                <input
                  accept="*"
                  class="w-full h-fit  p-3.5 rounded-md border-gray-500 bg-white focus:outline-none focus:border-blue-500"
                  data-testid="inventory-input"
                  id="inventory-input"
                  placeholder="24"
                  type="number"
                />
              </div>
              <!--&lt;Input&gt;-->
            </div>
          </div>
           
          <div
            class="py-2 mb-2"
          >
            <h4
              class="mb-1 text-black"
              data-testid="input-label-id"
            >
              Description
            </h4>
             
            <textarea
              class="w-full text-l px-3 py-2 p-3.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              id="large-text-input"
              placeholder="Ce produit provient de la ..."
              rows="4"
            />
          </div>
        </form>
         
        <footer
          class="w-11/12 flex flex-row md:justify-between gap-2 mb-5"
        >
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  }  h-12 bg-white hover:bg-orange-50 border text-black"
            data-testid="cancel-button"
            id="cancel-button"
          >
            Cancel
          </button>
          <!--&lt;Button&gt;-->
           
          <button
            class="flex justify-around items-center uppercase rounded-sm font-bold w-full md:w-2/3 shadow-sm h-12 btn function(...s) {
    let r = A(t);
    r.called = !0, r.callCount++, r.calls.push(s);
    let m = r.next.shift();
    if (m) {
      r.results.push(m);
      let [l, o] = m;
      if (l === "ok")
        return o;
      throw o;
    }
    let p, d = "ok";
    if (r.impl)
      try {
        new.target ? p = Reflect.construct(r.impl, s, new.target) : p = r.impl.apply(this, s), d = "ok";
      } catch (l) {
        throw p = l, d = "error", r.results.push([d, l]), l;
      }
    let a = [d, p];
    if (b(p)) {
      let l = p.then((o) => a[1] = o).catch((o) => {
        throw a[0] = "error", a[1] = o, o;
      });
      Object.assign(l, p), p = l;
    }
    return r.results.push(a), p;
  } bg-orange-50 hover:bg-white border border-orange-500 text-orange-500"
            data-testid="continue-button"
            id="continue-button"
          >
            Submit
          </button>
          <!--&lt;Button&gt;-->
        </footer>
      </div>
      <!--&lt;BaseModal&gt;-->
    </div>
    
    <!--&lt;OffersModificationModal&gt;-->
  </div>
</body>
`;
